--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -20,25 +20,27 @@
                 <h1>안녕하세요. 달타냥입니다.</h1>
                 <br/>
                 <p class="lead">
-                    음악과 컴퓨터와 수영을 좋아합니다.<br/>
-                    데이터분석으로 돈을 벌고, 퇴근 후에는 운동을 하거나 책을 쓰면서 지냅니다.
+                    {{lead}}
                 </p>
 
                 <ul>
-                    <li>WORK EXPERIENCE</li>
+                    <li>WORK</li>
                     <ul>
-                        <li>크고좋은회사 - 빅데이터분석 (2019.10 ~)</li>
-                        <li>모모공공기관 (2016.02 ~ 2019.09)</li>
+                         {% for w in work_history %}
+                             <li>{{w}}</li>
+                         {% endfor %}
                     </ul>
                     <li>EDUCATION</li>
                     <ul>
-                        <li>공학박사, 장고공학(Django Engineering), 파이썬대학교 (2010.03~2015.09)</li>
-                        <li>공학석사, 장고공학(Django Engineering), 파이썬대학교 (2007.09~2009.08)</li>
-                        <li>공학학사, 장고공학(Django Engineering), 파이썬대학교 (2003.03~2007.08)</li>
+                        {% for e in education_history%}
+                              <li>{{e}}</li>
+                        {% endfor %}
                     </ul>
                     <li>PUBLISH</li>
                     <ul>
-                        <li>DO IT DJANGO, 이지스퍼블리싱 (2020)</li>
+                        {% for p in publish_history%}
+                            <li>{{p}}</li>
+                        {% endfor %}
                     </ul>
                 </ul>
 
@@ -58,46 +60,28 @@
             </div>
         </div>
         <div class="row">
+            {% for title in card_titles %}
             <div class="col-lg-4">
-                <div class="card" data-toggle="modal" data-target="#pycon2017">
-                    <img class="card-img-top" src="{% static 'single_pages/images/pycon_sy_2017.png' %}">
+                <div class="card" data-toggle="modal" data-target="{{ title.target }}">
+                    <img class="card-img-top" src="{% get_static_prefix %}single_pages/images/{{title.img}}" >
                     <div class="card-body">
-                        <h5 class="card-title">파이썬으로 통계업무 자동화하기 [PYCON 2017]</h5>
-                        <p>Python, Django, Pandas, python-docx로 통계업무 자동화한 내용을 파이콘에서 발표했습니다.</p>
+                        <h5 class="card-title">{{ title.title }}</h5>
+                        <p>{{ title.content }}</p>
                     </div>
                 </div>
             </div>
-
-            <div class="col-lg-4">
-                <div class="card" data-toggle="modal" data-target="#inflearn_django2">
-                    <img class="card-img-top" src="{% static 'single_pages/images/inflearn_django2.png' %}">
-                    <div class="card-body">
-                        <h5 class="card-title">파이썬 사용자를 위한 웹개발 입문 A to Z Django + Bootstrap</h5>
-                        <p>파이썬 웹개발에 대한 인프런 동영상 강의입니다.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="card" data-toggle="modal" data-target="#automation_python">
-                    <img class="card-img-top" src="{% static 'single_pages/images/automation_python.png' %}">
-                    <div class="card-body">
-                        <h5 class="card-title">직장인을 위한 프로그래밍 입문과 업무자동화 활용</h5>
-                        <p>파이썬 업무자동화에 대한 인프런 동영상 강의입니다.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+            {% endfor %}
+      </div>
     </div>
 </section>
 
 <!-- Modal -->
-<div class="modal fade" id="pycon2017" tabindex="-1" role="dialog" aria-labelledby="pycon2017ModalLabel" aria-hidden="true">
+{% for title in card_titles %}
+<div class="modal fade" id="{{title.id}}" tabindex="-1" role="dialog" aria-labelledby="{{title.id}}ModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="pycon2017ModalLabel">파이썬으로 통계업무 자동화하기</h5>
+                <h5 class="modal-title" id="{{title.id}}ModalLabel">{{title.title}}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -105,10 +89,10 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-lg-7">
-                        <img class="img-fluid" src="{% static 'single_pages/images/pycon_sy_2017.png' %}">
+                        <img class="img-fluid" src="{% get_static_prefix %}single_pages/images/{{title.img}}">
                     </div>
                     <div class="col-lg-5">
-                        <p>Python, Django, Pandas, python-docx로 통계업무 자동화한 내용을 파이콘에서 발표했습니다.</p>
+                        <p>{{title.content}}</p>
                     </div>
                 </div>
             </div>
@@ -118,61 +102,7 @@
         </div>
     </div>
 </div>
-
-<div class="modal fade" id="inflearn_django2" tabindex="-1" role="dialog" aria-labelledby="inflearnDjangoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id=" inflearnDjangoModalLabel">파이썬 사용자를 위한 웹개발 입문 A to Z Django + Bootstrap</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-lg-7">
-                        <img class="img-fluid" src="{% static 'single_pages/images/inflearn_django2.png' %}">
-                    </div>
-                    <div class="col-lg-5">
-                        <p>파이썬 초보를 대상으로 한 웹개발 강좌입니다. 인프런에서 서비스하고 있습니다.</p>
-                        <button type="button" class="btn btn-light"><i class="fas fa-chalkboard-teacher"></i> 인프런</button>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="modal fade" id="automation_python" tabindex="-1" role="dialog" aria-labelledby="automationPythonModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id=" automationPythonModalLabel">직장인을 위한 프로그래밍 입문과 업무자동화 활용</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-lg-7">
-                        <img class="img-fluid" src="{% static 'single_pages/images/automation_python.png' %}">
-                    </div>
-                    <div class="col-lg-5">
-                        <p>코딩에 대해 아무것도 모르는 직장인들도 쉽게 프로그래밍의 기본 개념과 문법을 실습을 통해 배우고, 파일 입출력, 엑셀 데이터 처리, MS-word 문서 자동으로 만들기, 그래프 그리기, 웹스크래핑 등을 배웁니다.</p>
-                        <button type="button" class="btn btn-light"><i class="fas fa-chalkboard-teacher"></i> 인프런</button>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
+{% endfor %}
 
 
 
